refactor: clean up code formatting and remove unnecessary whitespace
Refactor multiple files to improve code formatting by removing unnecessary whitespace and ensuring consistent spacing. This enhances code readability and adheres to style guidelines.